--- a/client/src/app/modules/home/slider/slide/slide.component.html
+++ b/client/src/app/modules/home/slider/slide/slide.component.html
@@ -1,9 +1,6 @@
 <a [routerLink]="['/recipe', recipe._id]" class="block single-recipe-slide">
-  <figure
-    (mouseenter)="onMouseEnter()"
-    (mouseleave)="onMouseLeave()"
-  >
-    <!--<transition>-->
+  <figure (mouseenter)="onMouseEnter()" (mouseleave)="onMouseLeave()">
+    <!-- add transition here-->
     <ng-container *ngIf="recipe.image === undefined">
       <img
         src="../../../../../assets/images/default_recipe.jpg"
@@ -14,14 +11,13 @@
     </ng-container>
     <ng-container *ngIf="recipe.image">
       <img
-	  *ngIf="recipe.image"
+        *ngIf="recipe.image"
         [src]="recipe.image"
         [alt]="recipe.mealName"
         class="img-fit"
         loading="lazy"
       />
     </ng-container>
-    <!--</transition>-->
     <figcaption class="flex flex-center">
       <span
         ><strong>{{ recipe.mealName | sentenceCase }}</strong></span
