--- a/client/src/app/modules/shared/components/loader/loader.component.html
+++ b/client/src/app/modules/shared/components/loader/loader.component.html
@@ -1,7 +1,8 @@
 <div
-    [ngClass]="!bigLoader ? 'loaderContainer flex flexCenter mg1' : 'loaderContainer big'"
-  >
-    <div [ngClass]="!bigLoader ? 'small progress' : 'large progress'">
-      <!-- <div>Loading…</div> -->
-    </div>
+  [ngClass]="
+    !bigLoader ? 'loaderContainer flex flexCenter mg1' : 'loaderContainer big'
+  "
+>
+  <div [ngClass]="!bigLoader ? 'small progress' : 'large progress'">
   </div>
+</div>
