--- a/client/src/styles/base/_keyframes.scss
+++ b/client/src/styles/base/_keyframes.scss
@@ -1,208 +1,206 @@
-  
-  // keyframes
-  
-  @keyframes spinning {
-    from {
-      transform: rotate(0deg);
-    }
-  
-    to {
-      transform: rotate(360deg);
-    }
+// keyframes
+
+@keyframes spinning {
+  from {
+    transform: rotate(0deg);
   }
-  
-  @keyframes fade {
-    0% {
-      opacity: 0;
-    }
-  
-    100% {
-      opacity: 1;
-    }
+
+  to {
+    transform: rotate(360deg);
   }
-  
-  @keyframes fadePartial {
-    0% {
-      filter: brightness(40%);
-    }
-  
-    100% {
-      filter: brightness(100%);
-    }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
   }
-  
-  @-webkit-keyframes slide-down {
-    0% {
-      -webkit-transform: scaleY(0);
-      transform: scaleY(0);
-      -webkit-transform-origin: 100% 0%;
-      transform-origin: 100% 0%;
-      opacity: 0;
-    }
-  
-    100% {
-      -webkit-transform: scaleY(1);
-      transform: scaleY(1);
-      -webkit-transform-origin: 100% 0%;
-      transform-origin: 100% 0%;
-      opacity: 1;
-    }
+
+  100% {
+    opacity: 1;
   }
-  
-  @keyframes slide-down {
-    0% {
-      -webkit-transform: scaleY(0);
-      transform: scaleY(0);
-      -webkit-transform-origin: 100% 0%;
-      transform-origin: 100% 0%;
-      opacity: 0;
-    }
-  
-    100% {
-      -webkit-transform: scaleY(1);
-      transform: scaleY(1);
-      -webkit-transform-origin: 100% 0%;
-      transform-origin: 100% 0%;
-      opacity: 1;
-    }
+}
+
+@keyframes fadePartial {
+  0% {
+    filter: brightness(40%);
   }
-  
-  @-webkit-keyframes expand {
-    0% {
-      letter-spacing: -0.5em;
-      opacity: 0;
-    }
-  
-    40% {
-      opacity: 0.6;
-    }
-  
-    100% {
-      opacity: 1;
-    }
+
+  100% {
+    filter: brightness(100%);
   }
-  
-  @keyframes expand {
-    0% {
-      letter-spacing: -0.5em;
-      opacity: 0;
-    }
-  
-    40% {
-      opacity: 0.6;
-    }
-  
-    100% {
-      opacity: 1;
-    }
+}
+
+@-webkit-keyframes slide-down {
+  0% {
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+    -webkit-transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
+    opacity: 0;
   }
-  
-  @-webkit-keyframes movingBackground {
-    0% {
-      background-position: 0% 50%
-    }
-  
-    50% {
-      background-position: 100% 50%
-    }
-  
-    100% {
-      background-position: 0% 50%
-    }
+
+  100% {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+    -webkit-transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
+    opacity: 1;
   }
-  
-  @-moz-keyframes movingBackground {
-    0% {
-      background-position: 0% 50%
-    }
-  
-    50% {
-      background-position: 100% 50%
-    }
-  
-    100% {
-      background-position: 0% 50%
-    }
+}
+
+@keyframes slide-down {
+  0% {
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+    -webkit-transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
+    opacity: 0;
   }
-  
-  @keyframes movingBackground {
-    0% {
-      background-position: 0% 50%
-    }
-  
-    50% {
-      background-position: 100% 50%
-    }
-  
-    100% {
-      background-position: 0% 50%
-    }
+
+  100% {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+    -webkit-transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
+    opacity: 1;
   }
-  
-  @keyframes pulse {
-    50% {
-      color: lighten($graphite, 90%);
-      text-shadow: 0 0 15px lighten($graphite, 90%);
-    }
+}
+
+@-webkit-keyframes expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
   }
-  
-  // favorites heart
-  @keyframes pulsing-in {
-    0% {
-      transform: scale(1);
-    }
-  
-    25% {
-      transform: scale(1.1);
-    }
-  
-    50% {
-      transform: scale(1);
-    }
-  
-    75% {
-      transform: scale(1.1);
-    }
-  
-    100% {
-      transform: scale(1);
-    }
+
+  40% {
+    opacity: 0.6;
   }
-  
-  // scale-in top left (create/edit recipe, favorites, steps add/remove)
-  @-webkit-keyframes scale-in-tl {
-    0% {
-      -webkit-transform: scale(0);
-      transform: scale(0);
-      -webkit-transform-origin: 0% 0%;
-      transform-origin: 0% 0%;
-      opacity: 1;
-    }
-  
-    100% {
-      -webkit-transform: scale(1);
-      transform: scale(1);
-      -webkit-transform-origin: 0% 0%;
-      transform-origin: 0% 0%;
-      opacity: 1;
-    }
+
+  100% {
+    opacity: 1;
   }
-  
-  @keyframes scale-in-tl {
-    0% {
-      -webkit-transform: scale(0);
-      transform: scale(0);
-      -webkit-transform-origin: 0% 0%;
-      transform-origin: 0% 0%;
-      opacity: 1;
-    }
-  
-    100% {
-      -webkit-transform: scale(1);
-      transform: scale(1);
-      -webkit-transform-origin: 0% 0%;
-      transform-origin: 0% 0%;
-      opacity: 1;
-    }
+}
+
+@keyframes expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
   }
-  
+
+  40% {
+    opacity: 0.6;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes movingBackground {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@-moz-keyframes movingBackground {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes movingBackground {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes pulse {
+  50% {
+    color: lighten($graphite, 90%);
+    text-shadow: 0 0 15px lighten($graphite, 90%);
+  }
+}
+
+// favorites heart
+@keyframes pulsing-in {
+  0% {
+    transform: scale(1);
+  }
+
+  25% {
+    transform: scale(1.1);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+
+  75% {
+    transform: scale(1.1);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+// scale-in top left (create/edit recipe, favorites, steps add/remove)
+@-webkit-keyframes scale-in-tl {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transform-origin: 0% 0%;
+    transform-origin: 0% 0%;
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: 0% 0%;
+    transform-origin: 0% 0%;
+    opacity: 1;
+  }
+}
+
+@keyframes scale-in-tl {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transform-origin: 0% 0%;
+    transform-origin: 0% 0%;
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: 0% 0%;
+    transform-origin: 0% 0%;
+    opacity: 1;
+  }
+}
