--- a/client/src/app/modules/home/home-page/home-page.component.html
+++ b/client/src/app/modules/home/home-page/home-page.component.html
@@ -1,5 +1,8 @@
 <div class="container" id="homeContainer">
-  <app-search (changeParams)="getNewResults($event)" *ngIf="uiService.searchForm"></app-search>
+  <app-search
+    (changeParams)="getNewResults($event)"
+    *ngIf="uiService.searchForm"
+  ></app-search>
   <ng-container *ngIf="highestRatedRecipes.length">
     <app-slider [sliderRecipes]="highestRatedRecipes"></app-slider>
   </ng-container>
