--- a/client/src/app/modules/shared/components/private-recipe/private-recipe.component.html
+++ b/client/src/app/modules/shared/components/private-recipe/private-recipe.component.html
@@ -4,7 +4,7 @@
       <img
         src="../../../../../assets/images/default_recipe.jpg"
         [alt]="recipe.mealName"
-        class="block"
+        class="img-fit"
         loading="lazy"
       />
     </ng-container>
@@ -12,7 +12,7 @@
       <img
         [src]="recipe.image"
         [alt]="recipe.mealName"
-        class="block"
+        class="img-fit"
         loading="lazy"
       />
     </ng-container>
