--- a/client/src/app/modules/user/saved-recipes/saved-recipes.component.html
+++ b/client/src/app/modules/user/saved-recipes/saved-recipes.component.html
@@ -22,6 +22,7 @@
       *ngFor="let recipe of savedRecipes"
       class="render-recipes sorting-item"
       (updateFavorites)="removeFromFavorites($event)"
+      @scaleAnimation
     ></app-private-recipe>
   </div>
 </div>
